# gemini-ask

./: .gitignore  README.md  pyproject.toml
src/gemini_ask/: gemini_ask.py
